k8s_poetry/devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80    # Exposed port on the service
      targetPort: 8000  # The container's port
  type: NodePort  # Exposes the service outside the cluster
